--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 <h2>About Me</h2>
 <div class="columns">
 <div class="column" style="width:30%;">
-<p><img data-src="images/zahid.jpg" class="quarto-discovered-preview-image" width="600"></p>
+<p><img data-src="https://zahedasghar.netlify.app/profile.jpg" class="quarto-discovered-preview-image" width="600"></p>
 </div><div class="column" style="width:70%;">
 <div>
 <ul>
@@ -648,6 +648,9 @@
 <div class="Aside">
 <p>Peter Senge: The Fifth Discipline</p>
 </div>
+</section>
+<section id="section-5" class="slide level2">
+<h2></h2>
 <div class="columns">
 <div class="column" style="width:30%;">
 <p><img data-src="images/gr8_teacher.webp"><a href="https://owlcation.com/academia/Characteristics-Of-A-Good-Teacher">What makes a great teacher? A brief summary</a></p>
@@ -681,7 +684,7 @@
 </ul>
 </div>
 </section>
-<section id="section-5" class="slide level2" data-background-color="#FFF1EE">
+<section id="section-6" class="slide level2" data-background-color="#FFF1EE">
 <h2></h2>
 <p><a href="https://www.youtube.com/watch?v=UCFg9bcW7Bk" class="centered" data-background-color="#314f4f">Teaching methods for inspiring students of the future</a></p>
 <div>
@@ -691,7 +694,7 @@
 </ul>
 </div>
 </section>
-<section id="section-6" class="slide level2" data-background-color="#FFF1EE">
+<section id="section-7" class="slide level2" data-background-color="#FFF1EE">
 <h2></h2>
 <p><strong>Allow students to engage in:</strong></p>
 <div>
@@ -720,7 +723,7 @@
 <h1><span class="r-fit-text">Stay Hungry, Stay Foolish</span></h1>
 
 </section>
-<section id="section-7" class="slide level2" data-background-color="#B7FDE1">
+<section id="section-8" class="slide level2" data-background-color="#B7FDE1">
 <h2></h2>
 <div>
 <ul>
@@ -741,17 +744,17 @@
 <p><strong>“<span class="pink">I have learned that people will forget what you</span><span class="red">said</span></strong>, people will forget what you <span class="red"><strong>did</strong></span>, <span class="pink">but people will never forget how you made them</span> <span class="red"><strong>feel</strong></span>.” -Maya Angelou</p>
 </blockquote>
 </section>
-<section id="section-8" class="slide level2 center middle" data-background-color="#0c7156">
+<section id="section-9" class="slide level2 center middle" data-background-color="#0c7156">
 <h2></h2>
 <h3 id="لوئے-لوئے-پرہ-لے-کڑ-یے-پانڈا-جے-پانڈا-تدھ-پر-ہنا">لوئے لوئے پرہ لے کڑ یے پانڈا جے پانڈا تدھ پر ہنا</h3>
 <h3 id="شام-پئی-بن-شام-محمد-تو-کرہ-جاندی-نے-ڈرنا">شام پئی بن شام محمد تو کرہ جاندی نے ڈرنا</h3>
 </section>
-<section id="section-9" class="slide level2 center middle" data-background-color="#0c7156">
+<section id="section-10" class="slide level2 center middle" data-background-color="#0c7156">
 <h2></h2>
 <h3 id="کںڈے-سخت-گلاباں-والےدوروں-ویکھ-نہ-ڈریے">کںڈے سخت گلاباں والےدوروں ویکھ نہ ڈریے</h3>
 <h3 id="چوبھاں-جھلیےرت-چوایےتد-ھ-پھل-چولی-بھریے">چوبھاں جھلیےرت چوایےتد ھ پھل چولی بھریے</h3>
 </section>
-<section id="section-10" class="slide level2 center middle" data-background-color="#cf3a36">
+<section id="section-11" class="slide level2 center middle" data-background-color="#cf3a36">
 <h2></h2>
 <h3 id="اساں-سویر-دی-ہن-نیت-لئی-اے">اساں سویر دی ہن نیت لئی اے</h3>
 <h3 id="سورج-نو-ں-ہن-چڑھنا-پئے-گا">سورج نو ں ہن چڑھنا پئے گا</h3>
@@ -760,13 +763,13 @@
 <h3 id="جے-سقراط-دی-پیڑھی-بہنا">جے سقراط دی پیڑھی بہنا</h3>
 <h3 id="سر-دی-ہانڈی-کڑھنا-پئے-گا">سر دی ہانڈی کڑھنا پئے گا</h3>
 </section>
-<section id="section-11" class="slide level2" data-auto-animate="true">
+<section id="section-12" class="slide level2" data-auto-animate="true">
 <h2 data-id="quarto-animate-title"></h2>
 <div style="margin-top: 100px;">
 <p>Animating content</p>
 </div>
 </section>
-<section id="section-12" class="slide level2" data-auto-animate="true">
+<section id="section-13" class="slide level2" data-auto-animate="true">
 <h2 data-id="quarto-animate-title"></h2>
 <div style="margin-top: 200px; font-size: 3em; color: red;">
 <p>Animating content</p>
