--- a/index.html
+++ b/index.html
@@ -744,17 +744,17 @@
 <p><strong>“<span class="pink">I have learned that people will forget what you</span><span class="red">said</span></strong>, people will forget what you <span class="red"><strong>did</strong></span>, <span class="pink">but people will never forget how you made them</span> <span class="red"><strong>feel</strong></span>.” -Maya Angelou</p>
 </blockquote>
 </section>
-<section id="section-9" class="slide level2 center middle" data-background-color="#0c7156">
+<section id="section-9" class="slide level2 center middle" data-background-color="#ea7428">
 <h2></h2>
 <h3 id="لوئے-لوئے-پرہ-لے-کڑ-یے-پانڈا-جے-پانڈا-تدھ-پر-ہنا">لوئے لوئے پرہ لے کڑ یے پانڈا جے پانڈا تدھ پر ہنا</h3>
 <h3 id="شام-پئی-بن-شام-محمد-تو-کرہ-جاندی-نے-ڈرنا">شام پئی بن شام محمد تو کرہ جاندی نے ڈرنا</h3>
 </section>
-<section id="section-10" class="slide level2 center middle" data-background-color="#0c7156">
+<section id="section-10" class="slide level2 center middle" data-background-color="#ea7428">
 <h2></h2>
 <h3 id="کںڈے-سخت-گلاباں-والےدوروں-ویکھ-نہ-ڈریے">کںڈے سخت گلاباں والےدوروں ویکھ نہ ڈریے</h3>
 <h3 id="چوبھاں-جھلیےرت-چوایےتد-ھ-پھل-چولی-بھریے">چوبھاں جھلیےرت چوایےتد ھ پھل چولی بھریے</h3>
 </section>
-<section id="section-11" class="slide level2 center middle" data-background-color="#cf3a36">
+<section id="section-11" class="slide level2 center middle" data-background-color="#ea7428">
 <h2></h2>
 <h3 id="اساں-سویر-دی-ہن-نیت-لئی-اے">اساں سویر دی ہن نیت لئی اے</h3>
 <h3 id="سورج-نو-ں-ہن-چڑھنا-پئے-گا">سورج نو ں ہن چڑھنا پئے گا</h3>
@@ -762,18 +762,6 @@
 <h3 id="سر-موہنڈے-تے-دھرنا-پئے-گا">سر موہنڈے تے دھرنا پئے گا</h3>
 <h3 id="جے-سقراط-دی-پیڑھی-بہنا">جے سقراط دی پیڑھی بہنا</h3>
 <h3 id="سر-دی-ہانڈی-کڑھنا-پئے-گا">سر دی ہانڈی کڑھنا پئے گا</h3>
-</section>
-<section id="section-12" class="slide level2" data-auto-animate="true">
-<h2 data-id="quarto-animate-title"></h2>
-<div style="margin-top: 100px;">
-<p>Animating content</p>
-</div>
-</section>
-<section id="section-13" class="slide level2" data-auto-animate="true">
-<h2 data-id="quarto-animate-title"></h2>
-<div style="margin-top: 200px; font-size: 3em; color: red;">
-<p>Animating content</p>
-</div>
 
 <img src="logo_soe.jpg" class="slide-logo r-stretch"><div class="footer footer-default">
 
